log
Thu, Mar 27, 2025  5:23:13 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:34:27 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:13: error: 'List {aka struct List}' has no member named 'first'
     if (list->first == NULL) return NULL;
             ^~
Compilation failed
69e567f
Thu, Mar 27, 2025  5:34:56 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7f6aea
Thu, Mar 27, 2025  5:36:04 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
beadbfd
Thu, Mar 27, 2025  5:36:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
83a6356
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
90e283a
Thu, Mar 27, 2025  5:38:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
49e3c61
Thu, Mar 27, 2025  5:38:50 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a051dbd
Thu, Mar 27, 2025  5:39:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8bb5023
Thu, Mar 27, 2025  5:40:16 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ca1feb
Thu, Mar 27, 2025  5:40:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
14d383b
Thu, Mar 27, 2025  5:41:09 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
efe75ad
Thu, Mar 27, 2025  5:42:47 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ba74dcf
Thu, Mar 27, 2025  5:44:20 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f7e61f3
Thu, Mar 27, 2025  5:44:52 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bbe93a3
Thu, Mar 27, 2025  5:46:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
687d7fb
Thu, Mar 27, 2025  5:49:08 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4a8b18a
Thu, Mar 27, 2025  5:49:28 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9179dfe
Thu, Mar 27, 2025  5:50:26 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
0349d17
Thu, Mar 27, 2025  5:50:59 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
2b2a51f
Thu, Mar 27, 2025  5:52:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
695271c
Thu, Mar 27, 2025  5:52:36 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
44f13f2
Thu, Mar 27, 2025  5:53:10 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
07f8680
Thu, Mar 27, 2025  5:53:58 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
b7e6803
Thu, Mar 27, 2025  5:54:48 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
3689e99
Thu, Mar 27, 2025  5:56:02 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f222ff4
Thu, Mar 27, 2025  5:57:31 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
9dbfd1a
Thu, Mar 27, 2025  5:59:20 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
870dd55
